# malloryapi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/malloryapi/: __init__.py  _http.py  _pagination.py  _types.py  cli.py  client.py  exceptions.py
src/malloryapi/resources/: _base.py  assets.py  attack_patterns.py  breaches.py  content_chunks.py  dashboards.py  detection_signatures.py  exploitations.py  exploits.py  exports.py  extensions.py  geographies.py  industries.py  integrations.py  malware.py  mentions.py  observables.py  opinions.py  organizations.py  packages.py  products.py  profiles.py  references.py  schedules.py  search.py  sources.py  stories.py  technology_product_advisories.py  tenants.py  threat_actors.py  user.py  vulnerabilities.py  vulnerable_configurations.py  weaknesses.py  workspaces.py
tests/: conftest.py  test_actor_geographies.py  test_assets.py  test_breaches_export.py  test_cli.py  test_client.py  test_extensions.py  test_geographies.py  test_http.py  test_overview_methods.py  test_overviews.py  test_packages.py  test_profiles.py  test_stories_methods.py  test_tenants.py  test_tpa_sources.py  test_vulnerabilities.py  test_workspaces_bulk_remove.py  test_workspaces_methods.py
