[project]
name = "malloryapi"
dynamic = ["version"]
description = "Official Python client for the Mallory threat intelligence API"
authors = [
    {name = "Mallory AI", email = "hello@mallory.ai"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["mallory", "threat-intelligence", "cybersecurity", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://mallory.ai"
Documentation = "https://docs.mallory.ai"
Repository = "https://github.com/malloryai/malloryapi"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/malloryapi/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/malloryapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]
